--- a/css/styles.css
+++ b/css/styles.css
@@ -12,15 +12,24 @@ html {
 body {
     background-color: #1e1e1e;
     font-family: 'Open Sans', sans-serif;
-    font-size: 2rem;
+    font-size: 1rem;
     color: white;
     line-height: 1.2;
+}
+
+@media only screen and (min-width:641px) {
+    body {
+        font-size: 2rem;
+    }
 }
 p {
     padding-top: 4px;
     padding-bottom: 4px;
 }
 
+a:-webkit-any-link {
+    color: white;
+}
 /* Hide scrollbar for Chrome, Safari and Opera */
 body::-webkit-scrollbar {
     display: none;
@@ -45,10 +54,16 @@ h1, h2, h3, h4, a {
 }
 
 h2 {
-    font-size: 3.8rem;
+    font-size: 2rem;
     text-transform: uppercase;
     text-align: center;
-    margin-bottom: 16px;
+    padding-bottom: 16px;
+}
+
+@media only screen and (min-width:641px) {
+    h2 {
+        font-size: 3.8rem;
+    }
 }
 
 a {
@@ -124,10 +139,20 @@ nav.nav-header {
 
 nav.nav-header a {
     color: white;
-    font-size: 2rem;
-    margin-right: 16px;
+    font-size: 16px;
     text-transform: capitalize;
     transition: all .2s ease-in-out;
+    display: block;
+    text-align: center;
+    margin-bottom: 16px;
+}
+
+@media only screen and (min-width:641px) {
+    nav.nav-header a {
+        font-size: 2rem;
+        margin-right: 16px;
+        display: inline;
+    }    
 }
 
 nav.nav-header a:hover {
@@ -164,14 +189,13 @@ div.info h1 span {
 
 /* ------------------------------------------------------------------------------------------ // Sobre Mi // */
 
-div.informacion {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-div.informacion div.perfil {
-    flex-basis: calc(25% - 1rem);
+@media only screen and (min-width:641px) {
+    div.informacion {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;
+    }
 }
 
 div.informacion div.perfil img {
@@ -179,10 +203,22 @@ div.informacion div.perfil img {
     border-radius: 50%;
 }
 
-div.informacion div.descripcion {
-    flex-basis: calc(75% - 1rem);
-    padding-left: 2rem;
+div.informacion div.perfil {
+    width: 60%;
+    margin: 0 auto;
 }
+
+@media only screen and (min-width:641px) {
+    div.informacion div.perfil {
+        flex-basis: calc(25% - 1rem);
+    }
+    
+    div.informacion div.descripcion {
+        flex-basis: calc(75% - 1rem);
+        padding-left: 2rem;
+    }
+}
+
 
 div.descripcion p {
     padding: 4px 16px;
@@ -224,4 +260,21 @@ section.conocimientos::before {
 .galeria .habilidad img:hover {
     filter: grayscale(0);
     transform: scale(1);
+}
+
+/* ==========================================================================
+    Contacto
+========================================================================== */
+
+footer.contacto {
+    background-color: black;
+    margin: 0;
+    color: white;
+    padding: 16px;
+}
+
+footer.contacto a {
+    display: block;
+    text-align: center;
+    padding-bottom: 8px;
 }
