--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,7 @@ h2 {
     padding-bottom: 16px;
 }
 
-@media only screen and (min-width:641px) {
+@media only screen and (min-width:640px) {
     h2 {
         font-size: 3.8rem;
     }
@@ -117,10 +117,16 @@ a {
     position: relative;
     background-image: url(../img/site-hero.jpg);
     height: 100vh;
-    min-height: 640px;
+    min-height: 320px;
     background-position: center center;
     background-size: cover;
     filter: brightness(0.3);
+}
+
+@media only screen and (min-width:641px) {
+    .site-hero {
+        min-height: 640px;
+    }
 }
 
 div.contenido-header {
@@ -147,7 +153,7 @@ nav.nav-header a {
     margin-bottom: 16px;
 }
 
-@media only screen and (min-width:641px) {
+@media only screen and (min-width:640px) {
     nav.nav-header a {
         font-size: 2rem;
         margin-right: 16px;
@@ -189,7 +195,7 @@ div.info h1 span {
 
 /* ------------------------------------------------------------------------------------------ // Sobre Mi // */
 
-@media only screen and (min-width:641px) {
+@media only screen and (min-width:640px) {
     div.informacion {
         display: flex;
         flex-wrap: wrap;
@@ -208,7 +214,7 @@ div.informacion div.perfil {
     margin: 0 auto;
 }
 
-@media only screen and (min-width:641px) {
+@media only screen and (min-width:640px) {
     div.informacion div.perfil {
         flex-basis: calc(25% - 1rem);
     }
@@ -277,4 +283,29 @@ footer.contacto a {
     display: block;
     text-align: center;
     padding-bottom: 8px;
+}
+
+@media only screen and (min-width:640px) {
+    footer.contacto a {
+        display: inline;
+    }
+    nav.footer-nav {
+        text-align: center;
+    }
+
+    nav.footer-nav a {
+        margin-right: 16px;
+    }
+
+    nav.footer-nav a:last-of-type {
+        margin-right: 0;
+    }
+}
+
+footer.contacto a i.fa-whatsapp {
+    color: rgb(0, 185, 0);
+}
+
+footer.contacto a i.fa-envelope {
+    color: rgb(0, 119, 255);
 }
