--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,7 @@ body {
         font-size: 2rem;
     }
 }
+
 p {
     padding-top: 4px;
     padding-bottom: 4px;
@@ -30,15 +31,59 @@ p {
 a:-webkit-any-link {
     color: white;
 }
+
 /* Hide scrollbar for Chrome, Safari and Opera */
+
 body::-webkit-scrollbar {
     display: none;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
+
 body {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+}
+
+/* ==========================================================================
+    animations
+========================================================================== */
+
+.bounce {
+    -webkit-animation: bounce 2s infinite;
+    animation: bounce 2s infinite;
+}
+
+@-webkit-keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+    40% {
+        -webkit-transform: translateY(-30px);
+        transform: translateY(-30px);
+    }
+    60% {
+        -webkit-transform: translateY(-15px);
+        transform: translateY(-15px);
+    }
+}
+
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+    40% {
+        -webkit-transform: translateY(-30px);
+        transform: translateY(-30px);
+    }
+    60% {
+        -webkit-transform: tran slateY(-15px);
+        transform: translateY(-15px);
+    }
 }
 
 /* ==========================================================================
@@ -106,6 +151,99 @@ a {
 }
 
 /* ==========================================================================
+    Preloader
+========================================================================== */
+
+/* ------------------------------------------------------------------------------------------ // Spinner // */
+
+.spinner {
+    width: 70px;
+    height: 70px;
+    background-color: #fff;
+    border-radius: 100%;
+    -webkit-animation: sk-scaleout .5s infinite ease-in-out;
+    animation: sk-scaleout .5s infinite ease-in-out;
+}
+
+@-webkit-keyframes sk-scaleout {
+    0% {
+        transform: scale(0);
+        -webkit-transform: scale(0);
+    }
+    100% {
+        -webkit-transform: scale(1.0);
+        opacity: 0;
+    }
+}
+
+@keyframes sk-scaleout {
+    0% {
+        -webkit-transform: scale(0);
+        transform: scale(0);
+    }
+    100% {
+        -webkit-transform: scale(1.0);
+        transform: scale(1.0);
+        opacity: 0;
+    }
+}
+
+/* ------------------------------------------------------------------------------------------ // content // */
+
+.preloader {
+    position: fixed;
+    background-color: #FFF;
+    z-index: 9999999;
+    height: 100%;
+    width: 100%;
+    transition: .1s all ease;
+    transition-delay: .5s;
+    -webkit-transition: .1s all ease;
+    -webkit-transition-delay: 0.5s;
+    -moz-transition: .1s all ease;
+    -moz-transition-delay: .5s;
+}
+
+.preloader .spinner-wrap {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 33333;
+}
+
+.preloader.loaded {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.preloader .left-side, .preloader .right-side {
+    position: absolute;
+    height: 100%;
+    width: 50%;
+    background-color: #000;
+    -webkit-transition: .5s all ease;
+    -o-transition: .5s all ease;
+    transition: .5s all ease;
+}
+
+.preloader .left-side {
+    left: 0;
+}
+
+.preloader .right-side {
+    right: 0;
+}
+
+.preloader.loaded .right-side {
+    transform: translateX(100%);
+}
+
+.preloader.loaded .left-side {
+    transform: translateX(-100%);
+}
+
+/* ==========================================================================
     header
 ========================================================================== */
 
@@ -121,6 +259,7 @@ a {
     background-position: center center;
     background-size: cover;
     filter: brightness(0.3);
+    clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 100%, 0 90%);
 }
 
 @media only screen and (min-width:641px) {
@@ -141,7 +280,23 @@ div.contenido-header {
 nav.nav-header {
     text-align: right;
     width: 100%;
+    position: fixed;
+    top: 0;
+    padding: 24px 36px;
+    margin-top: 16px;
+    z-index: 20;
+    transition: all .2s ease;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
+
+nav.nav-header.animate {
+    background-color: #1e1e1e;
+    margin: 0;
+    box-shadow: 0 10px 24px black;
+}
+
 
 nav.nav-header a {
     color: white;
@@ -150,13 +305,11 @@ nav.nav-header a {
     transition: all .2s ease-in-out;
     display: block;
     text-align: center;
-    margin-bottom: 16px;
 }
 
 nav.nav-header a:hover {
     color: #ff4800;
     text-shadow: 0 0 10px black;
-    transform: scale(1.1);
 }
 
 @media only screen and (min-width:640px) {
@@ -164,7 +317,7 @@ nav.nav-header a:hover {
         font-size: 2rem;
         margin-right: 16px;
         display: inline-block;
-    }    
+    }
 }
 
 nav.nav-header a:last-of-type {
@@ -175,10 +328,8 @@ nav.nav-header a:last-of-type {
 
 .contenido-header {
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
-    height: 60%;
 }
 
 div.info h1 {
@@ -190,8 +341,20 @@ div.info h1 {
     text-align: center;
 }
 
-div.info h1 span {
+div.info span {
     font-weight: 300;
+}
+
+div.info strong {
+    color: #ff4800;
+    font-weight: bold;
+}
+.arrow-wrap {
+    position: absolute;
+    left: calc(50% - 8px);
+    bottom: 5%;
+    transform: translateX(-50%);
+    z-index: 15;
 }
 
 /* ------------------------------------------------------------------------------------------ // Sobre Mi // */
@@ -219,16 +382,50 @@ div.informacion div.perfil {
     div.informacion div.perfil {
         flex-basis: calc(25% - 1rem);
     }
-    
     div.informacion div.descripcion {
         flex-basis: calc(75% - 1rem);
         padding-left: 2rem;
     }
 }
 
-
 div.descripcion p {
     padding: 4px 16px;
+}
+
+.boton {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 24px;
+}
+
+.boton .btn-descargar {
+    padding: 16px 24px;
+    transition: all .2s ease;
+    position: relative;
+    text-transform: uppercase;
+    border: 5px solid white;
+}
+
+.boton .btn-descargar::before {
+    content: '';
+    top: 0;
+    bottom: 0;
+    width: 0%;
+    /* transform: translateX(-16%); */
+    background-color: #ff4800;
+    position: absolute;
+    z-index: -1;
+    transition: all .2s ease;
+    margin-left: -14%;
+}
+
+.boton .btn-descargar:hover {
+    border: 5px solid transparent;
+}
+
+.boton .btn-descargar:hover::before {
+    width: 100%;
 }
 
 /* ------------------------------------------------------------------------------------------ // Conocimientos // */
@@ -293,11 +490,9 @@ footer.contacto a {
     nav.footer-nav {
         text-align: center;
     }
-
     nav.footer-nav a {
         margin-right: 16px;
     }
-
     nav.footer-nav a:last-of-type {
         margin-right: 0;
     }
