--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,16 @@ body {
     line-height: 1.2;
 }
 
+button {
+    background-color: transparent;
+    color: white;
+    border: none;
+}
+
+button:focus {
+    outline: none;
+}
+
 @media only screen and (min-width:641px) {
     body {
         font-size: 2rem;
@@ -300,18 +310,36 @@ div.contenido-header {
     bottom: 0;
 }
 
+/* ------------------------------------------------------------------------------------------ // navbar // */ 
+
+#menu-movil {
+    font-size: 2.8rem;
+}
+
+#menu-movil:hover {
+    color: #ff4800;
+}
+
+@media only screen and (min-width:641px) {
+    #menu-movil {
+        display: none;
+        flex-basis: 0%;
+    }
+}
+
 nav.nav-header {
-    text-align: right;
-    width: 100%;
     position: fixed;
     top: 0;
+    width: 100%;
     padding: 24px 36px;
     margin-top: 16px;
     z-index: 20;
     transition: all .2s ease;
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 2rem;
 }
 
 nav.nav-header.animate {
@@ -320,31 +348,43 @@ nav.nav-header.animate {
     box-shadow: 0 10px 24px black;
 }
 
-
-nav.nav-header a {
-    color: white;
-    font-size: 16px;
-    text-transform: capitalize;
-    transition: all .2s ease-in-out;
-    display: block;
+nav.nav-header .right {
+    display: none;
+    order: 2;
+    flex-basis: 100%;
     text-align: center;
+    margin-top: 24px;
 }
 
-nav.nav-header a:hover {
-    color: #ff4800;
-    text-shadow: 0 0 10px black;
-}
-
-@media only screen and (min-width:640px) {
-    nav.nav-header a {
-        font-size: 2rem;
-        margin-right: 16px;
-        display: inline-block;
+@media only screen and (min-width:641px) {
+    nav.nav-header .right {
+        display: inline !important;
+        order: 0;
+        flex-basis: auto;
+        margin: 0;
     }
 }
 
-nav.nav-header a:last-of-type {
-    margin: 0;
+nav.nav-header .left a:first-child {
+    margin-right: 8px;
+}
+
+nav.nav-header .right a {
+    display: inline-block;
+    width: 100%;
+    text-transform: capitalize;
+}
+
+@media only screen and (min-width:641px) {
+    nav.nav-header .right a {
+        display: inline;
+        text-transform: capitalize;
+        margin-right: 8px;
+    }
+
+    nav.nav-header .right a:last-child {
+        margin-right: 0;
+    }
 }
 
 /* ------------------------------------------------------------------------------------------ // Contenido Header // */
@@ -374,10 +414,11 @@ div.info strong {
 }
 .arrow-wrap {
     position: absolute;
-    left: calc(50% - 8px);
-    bottom: 5%;
-    transform: translateX(-50%);
+    left: 0;
+    right: 0;
+    bottom: 6%;
     z-index: 15;
+    text-align: center;
 }
 
 /* ------------------------------------------------------------------------------------------ // Sobre Mi // */
