--- a/css/styles.css
+++ b/css/styles.css
@@ -57,67 +57,6 @@ body {
     /* Firefox */
 }
 
-/* ==========================================================================
-    animations
-========================================================================== */
-
-.bounce {
-    -webkit-animation: bounce 2s infinite;
-    animation: bounce 2s infinite;
-}
-
-@-webkit-keyframes bounce {
-    0%, 20%, 50%, 80%, 100% {
-        -webkit-transform: translateY(0);
-        transform: translateY(0);
-    }
-    40% {
-        -webkit-transform: translateY(-30px);
-        transform: translateY(-30px);
-    }
-    60% {
-        -webkit-transform: translateY(-15px);
-        transform: translateY(-15px);
-    }
-}
-
-@keyframes bounce {
-    0%, 20%, 50%, 80%, 100% {
-        -webkit-transform: translateY(0);
-        transform: translateY(0);
-        color: white;
-    }
-    40% {
-        -webkit-transform: translateY(-30px);
-        transform: translateY(-30px);
-        color: #ff4800;
-    }
-    60% {
-        -webkit-transform: tran slateY(-15px);
-        transform: translateY(-15px);
-    }
-}
-
-.fade_in {
-    -webkit-animation: fadeIn 1s;
-    animation: fadeIn 1s;
-}
-
-.inicio {
-    visibility: hidden;
-}
-
-
-@keyframes fadeIn {
-    0% {
-        opacity: 0;
-        transform: translateY(120px);
-    }
-    100% {
-        opacity: 1;
-        transform: none;
-    }
-}
 
 /* ==========================================================================
     globales
@@ -327,6 +266,46 @@ div.contenido-header {
     }
 }
 
+nav.nav-header a {
+    position: relative;
+    transition: color .2s;
+}
+
+nav.nav-header a:hover {
+    color: #ff4800;
+}
+nav.nav-header a::after,
+nav.nav-header a::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    height: 2px;
+    background-color: #ff4800;
+    width: 0%;
+    transition: width .3s;
+}
+
+
+nav.nav-header a::after {
+    right: 0;
+}
+
+nav.nav-header a::before {
+    left: 0;
+}
+
+nav.nav-header a:hover::after,
+nav.nav-header a:hover::before {
+    width: 50%;
+}
+
+@media only screen and (min-width:641px){
+    nav.nav-header a:hover::after,
+    nav.nav-header a:hover::before {
+        width: 0;
+    }   
+}
+
 nav.nav-header {
     position: fixed;
     top: 0;
@@ -532,6 +511,110 @@ section.conocimientos::before {
 }
 
 /* ==========================================================================
+    portafolio
+========================================================================== */
+#portafolio {
+    background-color: #000;
+}
+
+.cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.card {
+    flex-basis: 100%;
+    position: relative;
+    text-align: center;
+    background-color: #1e1e1e;
+    padding: 3rem 1rem 1rem 1rem;
+    margin-bottom: 3.2rem;
+    transition: all .2s;
+
+}
+
+@media only screen and (min-width:641px){
+    .card {
+        flex-basis: calc(50% - 1.6rem);
+    }    
+}
+
+@media only screen and (min-width:969px){
+    .card {
+        flex-basis: calc(33% - 1.6rem);
+    }    
+}
+
+.card:hover {
+    transform: scale(1.02);
+    z-index: 3;
+}
+
+.card-content {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.card-header {
+    padding: 1.6rem;
+}
+
+.card-description {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.card-description .descripcion {
+    margin-bottom: 1rem;
+    font-size: 1.4rem;
+    font-weight: 700;
+}
+
+.card-description .tecnologias {
+    font-size: 1.4rem;
+}
+
+.card .card-header i {
+    font-size: 5rem;
+    margin-bottom: 2rem;
+}
+
+.btn-ver-mas {
+    background-color: #000;
+    padding: 1rem;
+    cursor: pointer;
+    transition: background-color .2s;
+    text-transform: uppercase;
+}
+
+.btn-ver-mas:hover {
+    background-color: #ff4800;
+}
+
+/* ------------------------------------------------------------------------------------------ // card after before // */ 
+
+.card::after, .card::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    height: 2px;
+    width: 0;
+    transition: width .2s;
+    background-color: #ff4800;
+}
+
+.card::after { left: 50%; }
+.card::before { right: 50%; } 
+
+.card:hover::after, .card:hover::before {
+    width: 50%;
+}
+
+/* ==========================================================================
     Contacto
 ========================================================================== */
 
@@ -569,4 +652,21 @@ footer.contacto a i.fa-whatsapp {
 
 footer.contacto a i.fa-envelope {
     color: rgb(0, 119, 255);
+}
+
+
+.icon-blue {
+    color: #4cc9f0;
+}
+
+.icon-green {
+    color: #52b69a;
+}
+
+.icon-orange {
+    color: #dc2f02;
+}
+
+.icon-red {
+    color: #9d0208;
 }
